--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -15,7 +15,10 @@ stages:
       dockerfilePath: ./Dockerfile
       buildContext: .
       tag: example-helloserver:${CICD_EXECUTION_SEQUENCE}
+      pushRemote: true
+      registry: 192.168.100.176:5000
 - name: Deploy
   steps:
   - applyYamlConfig:
       path: ./deployment.yaml
+notification: {}
