--- a/deployment.yaml
+++ b/deployment.yaml
@@ -31,6 +31,6 @@ spec:
       - name: pipeline-docker-registry
       containers:
       - name: helloserver
-        image: 192.168.100.176:5000/${CICD_IMAGE}:${CICD_EXECUTION_SEQUENCE}
+        image: ${CICD_IMAGE}:${CICD_EXECUTION_SEQUENCE}
         ports:
         - containerPort: 80
